--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -57,6 +57,7 @@ var fa = urlParams.get("fontalign") || "center";
 var id = urlParams.get("id") || "UClOyuxZvQkoHoIn15kNbkUw";
 var platform = urlParams.get("platform") || "youtube";
 var type = urlParams.get("type") || "channel";
+var studio = urlParams.get("studio") || false;
 var font = urlParams.get("font") || "Roboto";
 var sizee = urlParams.get("size") || "50";
 var fw = urlParams.get("fontweight") || "400";
