--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -143,26 +143,28 @@ function abbreviateNumber(num) {
 async function fetchyoutubechannel(channelId) {
   try {
     // Fetch data from the first API
-    const response = await axios.get(
+    const data = await fetch(
       `https://mixerno.space/api/youtube-channel-counter/user/${channelId}`
     );
 
     // Fetch data from the second API
-    const respons2e = await axios.get(
+    const dat2a = await fetch(
       `https://api-v2.nextcounts.com/api/youtube/channel/${channelId}`
     );
-
-    const subCount = response.data.counts[0].count;
-    const totalViews = response.data.counts[3].count;
-    const apiViews = response.data.counts[4].count;
-    const apiSubCount = response.data.counts[2].count;
-    const videos = response.data.counts[5].count;
-    const channelLogo = response.data.user[1].count;
-    const channelName = response.data.user[0].count;
-    const channelBanner = response.data.user[2].count;
+      
+    const response = data.json;
+    const respons2e = dat2a.json;
+    const subCount = response.counts[0].count;
+    const totalViews = response.counts[3].count;
+    const apiViews = response.counts[4].count;
+    const apiSubCount = response.counts[2].count;
+    const videos = response.counts[5].count;
+    const channelLogo = response.user[1].count;
+    const channelName = response.user[0].count;
+    const channelBanner = response.user[2].count;
     const goalCount = getGoal(subCount);
 
-    if (respons2e.data.verifiedSubCount === true) {
+    if (respons2e.verifiedSubCount === true) {
       return {
         t: new Date(),
         counts: [subCount, goalCount, apiSubCount, totalViews, apiViews, videos],
@@ -175,10 +177,11 @@ async function fetchyoutubechannel(channelId) {
           ["Views", "Views (API)"],
           ["Videos", "Videos (API)"]
         ],
-        studio: respons2e.data.subcount
+        studio: respons2e.subcount
       };
     } else if (channelId === "UCX6OQ3DkcsbYNE6H8uQQuVA") {
-      const mrbeast = await axios.get(`https://mrbeast.subscribercount.app/data`);
+      const dat3a = await fetch(`https://mrbeast.subscribercount.app/data`);
+      const mrbeast = dat3a.json;
       return {
         t: new Date(),
         counts: [subCount, goalCount, apiSubCount, totalViews, apiViews, videos],
@@ -191,7 +194,7 @@ async function fetchyoutubechannel(channelId) {
           ["Views", "Views (API)"],
           ["Videos", "Videos (API)"]
         ],
-        studio: mrbeast.data.mrbeast
+        studio: mrbeast.mrbeast
       };
     } else {
       return {
@@ -216,20 +219,23 @@ async function fetchyoutubechannel(channelId) {
 
 async function fetchyoutubevideo(videoId) {
   try {
-    const [response, respons2e, respons3e] = await Promise.all([
-      axios.get(`https://mixerno.space/api/youtube-video-counter/user/${videoId}`),
-      axios.get(`https://mixerno.space/api/youtube-stream-counter/user/${videoId}`),
-      axios.get(`https://returnyoutubedislikeapi.com/votes?videoId=${videoId}`)
+    const [data, dat2a, dat3a] = await Promise.all([
+      fetch(`https://mixerno.space/api/youtube-video-counter/user/${videoId}`),
+      fetch(`https://mixerno.space/api/youtube-stream-counter/user/${videoId}`),
+      fetch(`https://returnyoutubedislikeapi.com/votes?videoId=${videoId}`)
     ]);
 
-    const subCount = response.data.counts[0].count;
-    const totalViews = response.data.counts[3].count;
-    const apiViews = respons3e.data.dislikes;
-    const apiSubCount = response.data.counts[2].count;
-    const videos = response.data.counts[5].count;
-    const channelLogo = response.data.user[1].count;
-    const channelName = response.data.user[0].count;
-    const channelBanner = response.data.user[2].count;
+    const response = data.json;
+    const respons2e = dat2a.json;
+    const respons3e = dat3a.json;
+    const subCount = response.counts[0].count;
+    const totalViews = response.counts[3].count;
+    const apiViews = respons3e.dislikes;
+    const apiSubCount = response.counts[2].count;
+    const videos = response.counts[5].count;
+    const channelLogo = response.user[1].count;
+    const channelName = response.user[0].count;
+    const channelBanner = response.user[2].count;
     const goalCount = getGoal(subCount);
 
     return { "t": new Date(), counts: [subCount, goalCount, apiSubCount, totalViews, apiViews, videos], user: [channelName, channelLogo, channelBanner] };
@@ -241,21 +247,24 @@ async function fetchyoutubevideo(videoId) {
 
 async function fetchyoutubestream(videoId) {
   try {
-    const [response, respons2e, respons3e] = await Promise.all([
-      axios.get(`https://mixerno.space/api/youtube-video-counter/user/${videoId}`),
-      axios.get(`https://mixerno.space/api/youtube-stream-counter/user/${videoId}`),
-      axios.get(`https://returnyoutubedislikeapi.com/votes?videoId=${videoId}`)
+    const [data, dat2a, dat3a] = await Promise.all([
+      fetch(`https://mixerno.space/api/youtube-video-counter/user/${videoId}`),
+      fetch(`https://mixerno.space/api/youtube-stream-counter/user/${videoId}`),
+      fetch(`https://returnyoutubedislikeapi.com/votes?videoId=${videoId}`)
     ]);
 
-    const liveCount = respons2e.data.counts[0].count;
-    const subCount = response.data.counts[0].count;
-    const totalViews = response.data.counts[3].count;
-    const apiViews = respons3e.data.dislikes;
-    const apiSubCount = response.data.counts[2].count;
-    const videos = response.data.counts[5].count;
-    const channelLogo = response.data.user[1].count;
-    const channelName = response.data.user[0].count;
-    const channelBanner = response.data.user[2].count;
+    const response = data.json;
+    const respons2e = dat2a.json;
+    const respons3e = dat3a.json;
+    const liveCount = respons2e.counts[0].count;
+    const subCount = response.counts[0].count;
+    const totalViews = response.counts[3].count;
+    const apiViews = respons3e.dislikes;
+    const apiSubCount = response.counts[2].count;
+    const videos = response.counts[5].count;
+    const channelLogo = response.user[1].count;
+    const channelName = response.user[0].count;
+    const channelBanner = response.user[2].count;
     const goalCount = getGoal(subCount);
 
     return { "t": new Date(), counts: [liveCount, goalCount, subCount, apiSubCount, totalViews, apiViews, videos], user: [channelName, channelLogo, channelBanner] };
@@ -267,14 +276,15 @@ async function fetchyoutubestream(videoId) {
 
 async function fetchinstagramuser(userId) {
   try {
-    const response = await axios.get(`https://api-v2.nextcounts.com/api/instagram/user/${userId}`);
+    const data = await fetch(`https://api-v2.nextcounts.com/api/instagram/user/${userId}`);
 
-    const subCount = response.data.followers;
-    const totalViews = response.data.posts;
-    const apiSubCount = response.data.following;
-    const channelLogo = response.data.avatar;
-    const channelName = response.data.nickname;
-    const channelBanner = response.data.userBanner;
+    const response = data.json;
+    const subCount = response.followers;
+    const totalViews = response.posts;
+    const apiSubCount = response.following;
+    const channelLogo = response.avatar;
+    const channelName = response.nickname;
+    const channelBanner = response.userBanner;
     const goalCount = getGoal(subCount);
 
     return { "t": new Date(), counts: [subCount, goalCount, apiSubCount, totalViews], user: [channelName, channelLogo, channelBanner] };
@@ -286,15 +296,16 @@ async function fetchinstagramuser(userId) {
 
 async function fetchtiktokuser(userId) {
   try {
-    const response = await axios.get(`https://mixerno.space/api/tiktok-user-counter/user/${userId}`);
+    const data = await fetch(`https://mixerno.space/api/tiktok-user-counter/user/${userId}`);
 
-    const subCount = response.data.counts[0].count;
-    const totalViews = response.data.counts[4].count;
-    const apiViews = response.data.counts[3].count;
-    const apiSubCount = response.data.counts[2].count;
-    const channelLogo = response.data.user[1].count;
-    const channelName = response.data.user[0].count;
-    const channelBanner = response.data.user[2].count;
+    const response = data.json;
+    const subCount = response.counts[0].count;
+    const totalViews = response.counts[4].count;
+    const apiViews = response.counts[3].count;
+    const apiSubCount = response.counts[2].count;
+    const channelLogo = response.user[1].count;
+    const channelName = response.user[0].count;
+    const channelBanner = response.user[2].count;
     const goalCount = getGoal(subCount);
 
     return { "t": new Date(), counts: [subCount, goalCount, apiSubCount, totalViews, apiViews], user: [channelName, channelLogo, channelBanner] };
@@ -306,17 +317,18 @@ async function fetchtiktokuser(userId) {
 
 async function fetchtwitteruser(userId) {
   try {
-    const response = await axios.get(`https://mixerno.space/api/twitter-user-counter/user/${userId}`);
+    const data = await fetch(`https://mixerno.space/api/twitter-user-counter/user/${userId}`);
 
-    const subCount = response.data.counts[0].count;
-    const totalViews = response.data.counts[3].count;
-    const apiViews = response.data.counts[4].count;
-    const apiSubCount = response.data.counts[2].count;
-    const videos = response.data.counts[5].count;
-    const extra = response.data.counts[6].count;
-    const channelLogo = response.data.user[1].count;
-    const channelName = response.data.user[0].count;
-    const channelBanner = response.data.user[2].count;
+    const response = data.json;
+    const subCount = response.counts[0].count;
+    const totalViews = response.counts[3].count;
+    const apiViews = response.counts[4].count;
+    const apiSubCount = response.counts[2].count;
+    const videos = response.counts[5].count;
+    const extra = response.counts[6].count;
+    const channelLogo = response.user[1].count;
+    const channelName = response.user[0].count;
+    const channelBanner = response.user[2].count;
     const goalCount = getGoal(subCount);
 
     return { "t": new Date(), counts: [subCount, goalCount, apiSubCount, totalViews, apiViews, videos, extra], user: [channelName, channelLogo, channelBanner] };
