--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -367,6 +367,7 @@ document.getElementById("count").innerHTML = parseInt(padZero(now.getHours()) + 
     str = ("fetch" + platform + type);
     data = window[str](id);
     console.log(data);
+    console.log(fetchyoutubechannel(id));
     if (studio == true) {
         count = goal - data.studio;
     } else {
