--- a/streams/mrbeastrise/mrbeast.html
+++ b/streams/mrbeastrise/mrbeast.html
@@ -1,7 +1,7 @@
 <link id="font" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 <link rel=stylesheet href="https://lcedit.com/odometer/odometer.css">
 <script src="https://lcedit.com/odometer/odometer.js"></script>
-
+<script src="https://huntingstats378.github.io/main/assets/js/fetch-requests.js"></script>
 <body>
     <span id="count" class="odometer">0</span>
 </body>
