--- a/streams/mrbeastrise/mrbeast.html
+++ b/streams/mrbeastrise/mrbeast.html
@@ -95,7 +95,7 @@ function durationNumber(num) {
 
 // Function to fetch the latest ID
 async function updateId() {
-    const res = await fetch(`https://huntingstats378.github.io/streams/mrbeastrise/ids.json`);
+    const res = await fetch(`./ids.json`);
     const data = await res.json();
     id = data.user1;
 }
